<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorprimary">


    <ImageView
        android:id="@+id/bolas"
        android:layout_width="129dp"
        android:layout_height="118dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/bolasfundo" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bolas">


        <TextView
            android:id="@+id/bemVindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/bemVindo"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/consulte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/consulteaqui"
            android:textColor="@color/white"
            android:textSize="20dp"

            android:layout_marginTop="20dp"
            android:layout_below="@id/bemVindo"/>

        <TextView
            android:id="@+id/preparadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/preparadas"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"

            android:layout_marginTop="5dp"
            android:layout_below="@id/consulte"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/botaoHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/preparadas"
            android:textAlignment="2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"

            android:layout_marginTop="10dp"
            android:text="@string/login" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bolas">


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buscar"
        style="@style/botaoBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/colorprimary"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_search"
        android:textStyle="bold"

        android:text="@string/buscar"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@id/imageView2"
        />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="26dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:scaleX="2"
        android:scaleY="1.5"
        app:srcCompat="@drawable/fundocortado" />

</RelativeLayout>